--- a/src/control/control
+++ b/src/control/control
@@ -1,4 +1,4 @@
-Package: whenandwhen
+Package: whereandwhen
 Version: 0.0.1
 Depends: gpsd gpsd-clients kmod-usb-acm kmod-usb-core kmod-usb-ehci kmod-usb-xhci-hcd kmod-usb2 kmod-usb3 terminfo libncurses6 libusb-1.0-0
 Provides:
