--- a/src/control/control
+++ b/src/control/control
@@ -1,6 +1,6 @@
 Package: whereandwhen
-Version: 0.1.0
-Depends: gpsd, kmod-usb-acm, kmod-usb-core, kmod-usb-ehci, kmod-usb-xhci-hcd, kmod-usb2, kmod-usb3, kmod-usb-serial-pl2303, kmod-usb-serial
+Version: 0.1.1
+Depends: gpsd, kmod-usb-acm, kmod-usb-core, kmod-usb-ehci, kmod-usb-xhci-hcd, kmod-usb2, kmod-usb3, kmod-usb-serial-pl2303, kmod-usb-serial, kmod-usb-dwc2, kmod-usb-dwc3, kmod-usb-dwc3-qcom
 Provides:
 Source: package/whereandwhen
 Section: util
